commit my modify 2023.2.23 20:00

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,6 +56,10 @@ h1, h2, h3, h4, h5 {
     line-height: 1.5;
 }
 
+p{
+    text-indent: 2em;
+}
+
 .progress-list div {
     width: 100%;
     margin-left: 200px;
