--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,7 +195,7 @@ progress::-moz-progress-value {
     margin: 0 auto;
     margin-top:20px;
     margin-bottom: 10px;
-    background-image:url('../image/head.png');
+    background-image:url('../image/head.jpg');
     background-size: 120%;
     background-position:center;
     border-radius:50%;
