--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,13 +195,13 @@ progress::-moz-progress-value {
     margin: 0 auto;
     margin-top:20px;
     margin-bottom: 10px;
-    background-image:url('../image/head.jpg');
+    background-image:url('../image/head.png');
     background-size: 120%;
     background-position:center;
     border-radius:50%;
     border:5px solid #607d8b;
-    width:160px;
-    height:160px;
+    width:200px;
+    height:200px;
 }
 
 
