--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,11 @@ h1, h2, h3, h4, h5 {
 
 p{
     text-indent: 2em;
+    font-size: 14px;
+}
+
+b{
+    font-size: 15px;
 }
 
 .progress-list div {
@@ -217,20 +222,27 @@ progress::-moz-progress-value {
 
 .side {
     position: absolute;
-    width: 360px;
+    width: 350px;
     height: 100%;
     background-color: whitesmoke;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .main {
     
     position: relative;;
-    margin-left: 360px;
+    margin-left: 350px;
     min-height: 100%;
     padding: 20px;
 
+}
+
+.header {
+  display: flex;
+  justify-content: space-between; /* 左右分布 */
+  align-items: baseline;          /* 保持基线对齐，不会太突兀 */
+  margin-bottom: 10px;
 }
 
 .info-header:hover {
