--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,26 @@
-html,
-.wrapper {
-    transform: scale(0.6);
-    transform-origin: center  center;
-    width: 150%;   /* 关键：防止被裁剪 */
-    height: 150%;
-}
-
-
-body {
-    width: 150%;
-    height: 150%;
+html, body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     background-color: #161929;
-    position: relative;
     overflow: hidden;
     user-select: none;
 }
+
+.wrapper {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.6);
+    transform-origin: center center;
+
+    width: 150%;  /* 放大内容 */
+    height: 150%;
+}
+
+
+
 
 audio {
     opacity: 0;
