--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,7 @@ html, body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0.6);
-    transform-origin: center center;
+    transform-origin: left top;
 
     width: 150%;  /* 放大内容 */
     height: 150%;
